Fix width of radio buttons area on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -671,7 +671,7 @@ body {
     }
 
     .switches__custom-radio {
-        margin: 3px;
+        margin: 1px;
     }
 
     .columns__col {
